KUDU-2083. Decrement running maintenance ops on failed prepare

There is currently a bug where we don't decrement the number of
running ops when an op->Prepare() fails. Although rare, when this
bug is hit, it will decrease the number of simultaneous mm ops
that can run until none can, causing the tserver to run OOM.

Change-Id: I8022bcd4c6470dfef2dece0cbefede916a752291
Reviewed-on: http://gerrit.cloudera.org:8080/7610
Reviewed-by: Todd Lipcon <todd@apache.org>
Tested-by: Kudu Jenkins
(cherry picked from commit b365ad0bd6372d459f547da0f1cb82e36148c541)
Reviewed-on: http://gerrit.cloudera.org:8080/7968